--- a/style.css
+++ b/style.css
@@ -1203,18 +1203,16 @@ img {
 }
 
 .loader-spinner {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border: 4px solid rgba(0, 0, 0, 0.05);
     border-top-color: var(--google-blue);
     border-radius: 50%;
-    animation: spin 1s linear infinite, google-colors 4s linear infinite;
+    animation: spin 0.8s ease-in-out infinite, google-colors 2s ease-in-out infinite;
 }
 
 @keyframes google-colors {
-
-    0%,
-    100% {
+    0% {
         border-top-color: var(--google-blue);
     }
 
@@ -1228,6 +1226,10 @@ img {
 
     75% {
         border-top-color: var(--google-green);
+    }
+
+    100% {
+        border-top-color: var(--google-blue);
     }
 }
 
@@ -1500,12 +1502,14 @@ img {
         border-radius: 30px;
     }
 }
+
 /* Section Fade-Blur Animation */
 @keyframes fadeInBlur {
     0% {
         opacity: 0;
         filter: blur(10px);
     }
+
     100% {
         opacity: 1;
         filter: blur(0);
