--- a/style.css
+++ b/style.css
@@ -495,6 +495,7 @@ img {
     letter-spacing: -3px;
     line-height: 0.95;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -541,6 +542,7 @@ img {
     cursor: pointer;
     overflow: hidden;
     -webkit-mask-image: -webkit-radial-gradient(white, black);
+    mask-image: radial-gradient(white, black);
 }
 
 .profile-img-container:hover {
